2003-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03793] incremental search fix
	* main.c (dispincsrch): revert sbuf.pos fix
			start from next position in next forward search
		(srch): start from next position in forward saerch
			if not found, restore original position
		(srch_nxtprv): start from next position in next forward search
	* search.c (forwardSearch): search from current position

2003-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03792] URL match string
			incremental search fix
	* main.c (chkURLBuffer): allow - at end of URL string
		(dispincsrch): start from current position in case of
				incremental search
	* search.c (forwardSearch): found if same position
		(backwardSearch): ditto

2003-03-03  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03788] UFhalfclose
	* file.c (UFhalfclose): closeNews() for SCM_NEWS,NNTP

2003-02-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03783] pipe to "command1 | command2"
	* Bonus/utf8.cgi: added

2003-02-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03784] ftp directory support
	* ftp.c (AbortLoading): added
		(KeyAbort): added
		(openFTPStream): remove '~' in realpathname?
		(loadFTPDir): remove '~' in realpathname?
			keyabort
			new ex_ftpdir_name_size_date()
			add symlink information to flist
		(XD_CTOD): deleted
		(EX_COUNT_DIGIT): added
		(ex_ftpdir_name_size_date): add **link
			accept device file
			loose date check for localized server

2003-02-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03783] pipe to "command1 | command2"
	* etc.c (myExtCommand): redirect to subshell
	* main.c (pipeBuf): conv_to_system(cmd)
			shell_quote()
			set buf->filename, buf->buffername

2003-02-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03782] real linenumber for EDIT and EDIT_SCREEN
	* main.c (cur_real_linenumber): added
		(editBf): use cur_real_linenumber instead of CUR_LINENUMBER
		(editScr): ditto
