@@ -1,3 +1,12 @@
+2003-03-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03794] displayBuffer() when CurrentTab == NULL.
+	* display.c (displayBuffer): check buf
+	* linein.c (inputLineHistSearch): check CurrentTab
+		(next_dcompl): check CurrentTab
+		(_editor): check CurrentTab
+	* main.c (resize_screen): check CurrentTab
+
 2003-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03793] incremental search fix
